# aerostack2

as2_behavior_tree/: CMakeLists.txt
as2_behavior_tree/include/as2_behavior_tree/action/: go_to_action.hpp  precision_landing_action.hpp  (+1 more)
as2_behavior_tree/plugins/action/: go_to_action.cpp  precision_landing_action.cpp  wait_for_tf_action.cpp
as2_behavior_tree/plugins/condition/: is_aruco_detected_condition.cpp
as2_behavior_tree/plugins/decorator/: wait_for_aruco.cpp  wait_for_tf_decorator.cpp
as2_behavior_tree/src/: as2_behavior_tree_node.cpp
as2_behaviors/as2_behaviors_motion/: CMakeLists.txt  plugins.xml
as2_behaviors/as2_behaviors_motion/launch/: precision_landing_behavior_launch.py
as2_behaviors/as2_behaviors_perception/: CMakeLists.txt
as2_behaviors/as2_behaviors_perception/detect_ariel_marker_behavior/: CMakeLists.txt
as2_behaviors/as2_behaviors_perception/detect_aruco_markers_behavior/: CMakeLists.txt
as2_behaviors/as2_behaviors_perception/detect_aruco_markers_behavior/config/: ariel_static_transforms.yaml  sim_params.yaml
as2_behaviors/as2_behaviors_perception/detect_aruco_markers_behavior/include/detect_aruco_markers_behavior/: detect_aruco_markers_behavior.hpp  detect_aruco_markers_behavior_pub_landingpad.hpp
as2_behaviors/as2_behaviors_perception/detect_aruco_markers_behavior/launch/: detect_aruco_markers_behavior_sim_launch.py  detect_aruco_markers_behavior_tf_only_launch.py  detect_landing_pad_behavior.py
as2_behaviors/as2_behaviors_perception/detect_aruco_markers_behavior/src/: detect_aruco_markers_behavior.cpp  detect_aruco_markers_behavior_pub_landingpad.cpp  detect_aruco_markers_behavior_pub_landingpad_node.cpp
as2_behaviors/as2_behaviors_perception/detect_landing_pad_behavior/: CMakeLists.txt
as2_core/src/: _as2_core_pybind11.cpp
as2_msgs/action/: PrecisionLanding.action
as2_simulation_assets/as2_gazebo_assets/: CMakeLists.txt
as2_simulation_assets/as2_gazebo_assets/plugins/: SuctionGripper.cpp  SuctionGripper.hpp
as2_simulation_assets/as2_gazebo_assets/worlds/: default.sdf.jinja  grass.sdf.jinja
(+31 files in other folders)
